# python-magnumclient

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.md  README.rst  bandit.yaml  lower-constraints.txt  openstack-common.conf  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  readme.rst  usage.rst
magnumclient/: client.py  exceptions.py  i18n.py  magnum.py  shell.py  version.py
magnumclient/api/: baymodels.py  bays.py  client.py  containers.py  httpclient.py  pods.py  services.py  shell.py
magnumclient/common/: base.py  cliutils.py  httpclient.py  utils.py
magnumclient/common/apiclient/: auth.py  base.py  exceptions.py
magnumclient/openstack/common/: _i18n.py  cliutils.py
magnumclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
magnumclient/osc/: cluster_templates.py  plugin.py
magnumclient/osc/v1/: certificates.py  cluster_templates.py  clusters.py  credentials.py  mservices.py  nodegroups.py  quotas.py  stats.py
magnumclient/tests/: base.py  test_client.py  test_httpclient.py  test_magnumclient.py  test_shell.py  test_shell_args.py  test_utils.py  utils.py
magnumclient/tests/api/: test_shell.py
magnumclient/tests/osc/unit/: osc_fakes.py  test_plugin.py
magnumclient/tests/osc/unit/v1/: fakes.py  test_certificates.py  test_cluster_templates.py  test_clusters.py  test_mservices.py  test_nodegroups.py  test_quotas.py  test_stats.py
magnumclient/tests/osc/v1/: fakes.py
magnumclient/tests/test_csr/: test.csr
magnumclient/tests/v1/: shell_test_base.py  test_baymodels.py  test_baymodels_shell.py  test_bays.py  test_bays_shell.py  test_certificates.py  test_certificates_shell.py  test_client.py  test_clusters.py  test_clusters_shell.py  test_clustertemplates.py  test_clustertemplates_shell.py  test_containers.py  test_containers_shell.py  test_mservices.py  test_mservices_shell.py  test_nodegroups.py  test_nodes.py  test_nodes_shell.py  test_pods.py  test_pods_shell.py  test_quotas.py  test_quotas_shell.py  test_replicationcontroller.py  test_replicationcontrollers.py  test_replicationcontrollers_shell.py  test_services.py  test_services_shell.py  test_shell.py  test_stats.py  test_stats_shell.py
magnumclient/v1/: basemodels.py  baseunit.py  baymodels.py  baymodels_shell.py  bays.py  bays_shell.py  certificates.py  certificates_shell.py  client.py  cluster_templates.py  cluster_templates_shell.py  clusters.py  clusters_shell.py  containers.py  containers_shell.py  credentials.py  mservices.py  mservices_shell.py  nodegroups.py  nodes.py  nodes_shell.py  pods.py  pods_shell.py  quotas.py  quotas_shell.py  replicationcontroller.py  replicationcontrollers.py  replicationcontrollers_shell.py  services.py  services_shell.py  shell.py  stats.py  stats_shell.py
python-magnumclient/locale/: python-magnumclient.pot
releasenotes/notes/: add-ct-tags-argument-3129c5038e95757e.yaml  bug-1870264-1b4f14618b8422f9.yaml  credential-rotate-02cc95069e3329fb.yaml  drop-bay-and-baymodel-79afa8d8161687ef.yaml  nodegroup-update-labels-taints-0d8c4b6e2f1a3c5d.yaml  partial_osc_implementation_for_certificate-4597c20b59c152e1.yaml  partial_osc_implementation_for_quotas-33f44c0496d721f8.yaml  rework-coe-cluster-set-ux-ddcbb30dfa0d336f.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
tools/: cover.sh  magnum.bash_completion  tox_install.sh
