[metadata]
name = python-magnumclient
summary = Client library for Magnum API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-magnumclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    magnumclient

[entry_points]
console_scripts =
    magnum = magnumclient.shell:main

openstack.cli.extension =
    container_infra = magnumclient.osc.plugin

openstack.container_infra.v1 =
    coe_cluster_template_create = magnumclient.osc.v1.cluster_templates:CreateClusterTemplate
    coe_cluster_template_list = magnumclient.osc.v1.cluster_templates:ListTemplateCluster

    coe_cluster_create = magnumclient.osc.v1.clusters:CreateCluster
    coe_cluster_list = magnumclient.osc.v1.clusters:ListCluster

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = magnumclient/locale
domain = magnumclient

[update_catalog]
domain = magnumclient
output_dir = magnumclient/locale
input_file = magnumclient/locale/magnumclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = magnumclient/locale/magnumclient.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = True
warnerrors = True
