[metadata]
name = python-magnumclient
summary = Client library for Magnum API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/python-magnumclient/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    magnumclient

[entry_points]
console_scripts =
    magnum = magnumclient.shell:main

openstack.cli.extension =
    container_infra = magnumclient.osc.plugin

openstack.container_infra.v1 =
    coe_cluster_template_create = magnumclient.osc.v1.cluster_templates:CreateClusterTemplate
    coe_cluster_template_delete = magnumclient.osc.v1.cluster_templates:DeleteClusterTemplate
    coe_cluster_template_list = magnumclient.osc.v1.cluster_templates:ListTemplateCluster
    coe_cluster_template_show = magnumclient.osc.v1.cluster_templates:ShowClusterTemplate
    coe_cluster_template_update = magnumclient.osc.v1.cluster_templates:UpdateClusterTemplate

    coe_cluster_create = magnumclient.osc.v1.clusters:CreateCluster
    coe_cluster_list = magnumclient.osc.v1.clusters:ListCluster
    coe_cluster_delete = magnumclient.osc.v1.clusters:DeleteCluster
    coe_cluster_show = magnumclient.osc.v1.clusters:ShowCluster
    coe_cluster_update = magnumclient.osc.v1.clusters:UpdateCluster
    coe_cluster_config = magnumclient.osc.v1.clusters:ConfigCluster
    coe_cluster_resize = magnumclient.osc.v1.clusters:ResizeCluster
    coe_cluster_upgrade = magnumclient.osc.v1.clusters:UpgradeCluster
    coe_ca_rotate = magnumclient.osc.v1.certificates:RotateCa
    coe_ca_show = magnumclient.osc.v1.certificates:ShowCa
    coe_ca_sign = magnumclient.osc.v1.certificates:SignCa
    coe_stats_list = magnumclient.osc.v1.stats:ListStats
    coe_quotas_create = magnumclient.osc.v1.quotas:CreateQuotas
    coe_quotas_delete = magnumclient.osc.v1.quotas:DeleteQuotas
    coe_quotas_update = magnumclient.osc.v1.quotas:UpdateQuotas
    coe_quotas_show = magnumclient.osc.v1.quotas:ShowQuotas
    coe_quotas_list = magnumclient.osc.v1.quotas:ListQuotas

    coe_service_list = magnumclient.osc.v1.mservices:ListService


[compile_catalog]
directory = magnumclient/locale
domain = magnumclient

[update_catalog]
domain = magnumclient
output_dir = magnumclient/locale
input_file = magnumclient/locale/magnumclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = magnumclient/locale/magnumclient.pot

[wheel]
universal = 1
